--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="email_error">Invalid Email</string>
     <string name="test_password">123456</string>
     <string name="password_error">Invalid Password</string>
+    <string name="date_label">Date: </string>
 </resources>
