--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="test_password">123456</string>
     <string name="password_error">Invalid Password</string>
     <string name="date_label">Date: </string>
+    <string name="api_error">Oops Please try again later....</string>
 </resources>
